--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-SERVICE_NAME="go-party-service"
+PORT=localhost:8080
+SERVICE_NAME=go-party-service
 LOG_LEVEL=debug
+DATABASE_URL=postgres://admin:admin@localhost:5432/Party
+REDIS_URL=localhost:6379
