--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ PORT=localhost:8080
 SERVICE_NAME=go-party-service
 LOG_LEVEL=debug
 DATABASE_URL=postgres://admin:admin@localhost:5432/Party
+DATABASE_SCHEMA=party_service
 REDIS_URL=localhost:6379
