--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,8 @@ services:
       POSTGRES_PASSWORD: admin
       POSTGRES_USER: admin
       POSTGRES_DB: Party
+    volumes:
+      - party_data:/var/lib/postgresql/data
   cache:
     image: redis:8.2.2
     ports:
@@ -17,3 +19,6 @@ services:
     image: redis/redisinsight
     ports:
       - "5540:5540"
+
+volumes:
+  party_data:
